# setup.cfg
#  package information and installation configuration
#  setuptools
#  see also: setup.py & pyproject.toml

[metadata]
name = omnibrot
author_email = xbrot.rykath@xoxy.net
url = https://github.com/Rykath/omnibrot
classifiers = 
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.8
install_requires =
    numpy
    matplotlib
    cython >= 3.0.0a9
packages = find:

